@@ -23,7 +23,7 @@ coefplot(object,\dots)
                 cex.var=0.8, cex.pts=0.9, 
                 col.pts=1, pch.pts=20, var.las=2,
                 main=NULL, xlab=NULL, ylab=NULL, mar=c(1,3,5.1,2),
-                plot=TRUE, add=FALSE, epsilon=.1, \dots)
+                plot=TRUE, add=FALSE, offset=.1, \dots)
 
 \S4method{coefplot}{bugs}(object, var.idx=NULL, varnames=NULL, 
             CI=1, vertical=TRUE,
@@ -31,7 +31,7 @@ coefplot(object,\dots)
             cex.var=0.8, cex.pts=0.9, 
             col.pts=1, pch.pts=20, var.las=2, 
             main=NULL, xlab=NULL, ylab=NULL, 
-            plot=TRUE, add=FALSE, epsilon=.1,
+            plot=TRUE, add=FALSE, offset=.1,
             mar=c(1,3,5.1,2), \dots)
 
 \S4method{coefplot}{numeric}(object, \dots)
@@ -71,7 +71,7 @@ coefplot(object,\dots)
           the four sides of the plot. The default is \code{c(1,3,5.1,2)}.}
   \item{plot}{default is TRUE, plot the estimates.}
   \item{add}{if add=TRUE, plot over the existing plot. default is FALSE.}
-  \item{epsilon}{add extra spaces to separate from the existing dots. default is 0.1.}
+  \item{offset}{add extra spaces to separate from the existing dots. default is 0.1.}
   \item{var.idx}{the index of the variables of a bugs object, default
         is NULL which will plot all the variables.}
   \item{intercept}{If TRUE will plot intercept, default=FALSE to get better presentation.}
